add: 增加设置选项, 使用Preferences

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,9 @@
             android:label="@string/about"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Settings"
+            android:label="@string/action_settings"
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
