Update: 从GitHub中获取更新 TODO: 自动关闭SSR 看看能不能直接从B站下资源?

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,15 @@
             android:name=".Settings"
             android:label="@string/action_settings"
             android:parentActivityName=".MainActivity" />
+        <provider
+            android:authorities="${applicationId}.fileprovider"
+            android:name="androidx.core.content.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+            </provider>
     </application>
 
 </manifest>
