UPDATE: minor update TODO: 看看能不能直接从B站下资源?

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 android {
+    signingConfigs {
+        config {
+            keyAlias 'Brainor'
+            keyPassword '5546456'
+            storeFile file('F:/个人信息/KeyStore.jks')
+            storePassword '5546456'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.brainor.bilihelper"
@@ -26,7 +34,6 @@ android {
             applicationIdSuffix '.debug'
         }
     }
-
     buildToolsVersion '28.0.3'
     productFlavors {
     }
@@ -39,14 +46,14 @@ android {
 dependencies {
     api 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.1.0-alpha02'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.preference:preference:1.1.0-alpha02'
+    implementation 'androidx.preference:preference:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 repositories {
