--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,12 @@ buildscript {
     repositories {
         google()
         jcenter()
+//        maven{url"https://dl.google.com/dl/android/maven2/"}
+//        maven{url "https://jcenter.bintray.com/"}
+//        maven { url "https://maven.google.com/"}
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
